# fastapi-quickstart

./: README.md  ROADMAP.md  pyproject.toml
src/fastapi_quickstart/: .env.example.postgres  .env.example.sqlite  __init__.py
src/fastapi_quickstart/cli/: __init__.py  migrations.py
src/fastapi_quickstart/core/: __init__.py  config.py  db.py
src/fastapi_quickstart/crud/: __init__.py  base.py
src/fastapi_quickstart/models/: __init__.py  mixins.py
src/fastapi_quickstart/schemas/: user.py
src/fastapi_quickstart/templates/: alembic.ini  script.py.mako
src/fastapi_quickstart/utils/: exceptions.py
tests/: conftest.py  test_config.py  test_crud.py  test_integration.py
