[build-system]
requires = ["setuptools >= 75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-quickstart"
version = "0.1.0"
description = "A package for rapid FastAPI development."
authors = [
    { name = "Dmytro Nedavnii", email = "d.nedavniid@proton.me" }
]
license = { text = "MIT" }
requires-python = ">=3.12,<3.14"
dependencies = [
    "alembic",
    "fastapi[standard]==0.128.0",
    "sqlmodel==0.0.31",
    "pydantic-settings",
]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
    "aiosqlite",
]

[project.optional-dependencies]
sqlite = ["aiosqlite"]
postgres = ["asyncpg"]

[project.scripts]
fastapi-quickstart = "fastapi_quickstart.cli:app"

[tool.ruff]
line-length = 120
extend-exclude = ["__pycache__", ".pytest_cache", "alembic"]
lint.select = [
    "FAST",
    "YTT",
    "ASYNC",
    "BLE",
    "FBT",
    "B",
    "A",
    "COM",
    "C4",
    "EM",
    "FA",
    "INT",
    "ISC",
    "ICN",
    "LOG",
    "G",
    "INP",
    "PIE",
    "F",
    "E",
    "W",
    "C90",
    "I",
    "N",
    "UP",
    "EM",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SIM",
    "TID",
    "TCH",
    "ARG",
    "PTH",
    "PGH",
    "PL",
    "TRY",
    "RUF",
]

lint.ignore = [
    "COM812",
    "ISC001",
    "B008", # do not perform function calls in argument defaults
    "PTH123", # builtin-open
    "S311", # pseudo-random
    "PLR2004",
    "PT023", # pytest-style
    "RUF012",
    "N805", # self
    "E712", # Avoid equality comparison
    "RUF022", # Allow unsorted __all__ for grouped exports
]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["id"]
